# ECS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_submodules.sh  check_header_validity.sh  doxyfile  index.html  run_tests.sh
.github/: .codecov.yml
.github/workflows/: CI.yml  Documentation.yml
docs/: index.html  style.css
docs/ECS/: annotated.html  annotated_dup.js  classes.html  component_8h.html  component_8h.js  component_8h__dep__incl.map  component_8h__dep__incl.md5  component_8h_add272a74ff3c9845d811fabebbf6c94a_cgraph.md5  component_8h_add272a74ff3c9845d811fabebbf6c94a_icgraph.map  component_8h_add272a74ff3c9845d811fabebbf6c94a_icgraph.md5  component_8h_source.html  component__destructor_8c.html  component__destructor_8c.js  component__destructor_8c__incl.map  component__destructor_8c__incl.md5  component__destructor_8c_add272a74ff3c9845d811fabebbf6c94a_cgraph.map  dir_000001_000000.html  dir_000003_000000.html  dir_6a63ce49392b0e408893f7b3c5f1cad9.html  dir_6a63ce49392b0e408893f7b3c5f1cad9.js  dir_6a63ce49392b0e408893f7b3c5f1cad9_dep.map  dir_6a63ce49392b0e408893f7b3c5f1cad9_dep.md5  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.map  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  ecs__color_8c.html  ecs__color_8c.js  ecs__color_8c__incl.map  ecs__color_8c__incl.md5  ecs__color_8h.html  ecs__color_8h.js  ecs__color_8h__dep__incl.map  ecs__color_8h__dep__incl.md5  ecs__color_8h_source.html  ecs__event_8c.html  (+328 more)
docs/ECS/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+35 more)
docs/coverage/: index.component_destructor.c.342b7bce16aa69a97685908be65af617.html  index.ecs_color.c.c423293d7903e7468c1a3897fd2bbe6e.html  index.ecs_event.c.c93b86930e72744e535061097222c659.html  index.ecs_graphics.c.81149526671177249d37e28852cb30f0.html  index.ecs_vector.c.9da3884d48e1badce4182a75f73d7c4b.html  index.ecs_window.c.0b6f3a48e6421b81d34787500f19c40c.html  index.entity_component.c.acbdc5e8b677dc4567be2360ab380811.html  index.html  index.vector.c.4f7a888089dabcfb283e7be12ac1cf8c.html  index.world.c.9d95c53958a7459c478c1faa5ff21ff5.html  index.world_constructor.c.2935e1aa394d1546288861973cb8bcc7.html  index.world_entity.c.acd45e52ee939a46433d008b71393526.html  index.world_logger.c.732dcf26b6d33211424102090534a109.html  index.world_resource.c.1702c390e91ad8a892b8cc60455a5985.html  index.world_system.c.c06d635ac6ed1b7ac1b1dbb53efafb13.html
include/: component.h  entity.h  network.h  resource.h  system.h  world.h  world_entity.h  world_logger.h  world_resource.h  world_system.h
include/utils/: ecs_color.h  ecs_event.h  ecs_graphics.h  ecs_vector.h  ecs_window.h
lib/include/: vector.h
lib/vector/: CMakeLists.txt
lib/vector/include/: vector.h
lib/vector/source/: vector.c
source/: component_destructor.c  entity_component.c  world.c  world_constructor.c  world_entity.c  world_logger.c  world_resource.c  world_system.c
source/utils/: ecs_color.c  ecs_event.c  ecs_graphics.c  ecs_vector.c  ecs_window.c  network.c
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  main.c
tests/functional/world/: CMakeLists.txt  client.c  server.c  world_destructor_with_entity.c  world_destructor_with_resource.c  world_join_entities.c
tests/functional/world/system/: CMakeLists.txt  world_run_systems.c
tests/unit_test/: CMakeLists.txt  component_destructor_tests.c  ecs_color_tests.c  ecs_event_tests.c  ecs_graphics_tests.c  ecs_vector_tests.c  entity_component_tests.c  world_constructor_tests.c  world_entity_tests.c  world_logger_tests.c  world_tests.c
